# ibus-typing-booster

./: .coderabbit.yaml  .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  README  README.html  README.md  Readme.md  _config.yml  autogen.sh  blurb.html  config.guess  config.sub  config.toml  configure.ac  development.html  documentation.html  emoji-picker.appdata.xml  fonts.conf  ibus-typing-booster.pc.in  ibus-typing-booster.spec  ibus-typing-booster.spec.fedora  ibus-typing-booster.spec.in  ibus-typing-booster.spec.suse  index.html  index.xml  mypy.sh  news.html  org.freedesktop.ibus.engine.typing-booster.gschema.xml  org.freedesktop.ibus.engine.typing_booster.emoji_picker.metainfo.xml  org.freedesktop.ibus.engine.typing_booster.emoji_picker.metainfo.xml.in  org.freedesktop.ibus.engine.typing_booster.metainfo.xml  org.freedesktop.ibus.engine.typing_booster.metainfo.xml.in  params.json  pylint.sh  pylintrc  pyproject.toml  ruff.toml  (+2 more)
_layouts/: default.html
_posts/: 2016-05-04-new-feature-multilingual-input.md  2018-05-28-all-ibus-typing-booster-engines-merged-into-one.md
content/: _index.md
css/: bootstrap.css  cayman.ea0e967413f3851071cc8ace3621bc4205fe8fa79b2abe3d7bf94ff2841f0d47.css
data/: DerivedAge.txt  Makefile.am  NameAliases.txt  UnicodeData.txt  af.xml  am.xml  ar.xml  as.xml  az.xml  be.xml  bg.xml  bn.xml  bs.xml  ca.xml  cs.xml  cy.xml  da.xml  de.xml  de_CH.xml  el.xml  emoji-data.txt  emoji-sequences.txt  emoji-test.txt  emoji-variation-sequences.txt  emoji-zwj-sequences.txt  en.xml  en_001.xml  en_GB.xml  es.xml  es_419.xml  et.xml  eu.xml  fa.xml  fi.xml  fi_FI.dic  fil.xml  fr.xml  ga.xml  gl.xml  gu.xml  (+54 more)
data/annotations/: Makefile.am  af.xml  af_NA.xml  af_ZA.xml  agq.xml  agq_CM.xml  ak.xml  ak_GH.xml  am.xml  am_ET.xml  ar.xml  ar_AE.xml  ar_BH.xml  ar_DJ.xml  ar_DZ.xml  ar_EG.xml  ar_EH.xml  ar_ER.xml  ar_IL.xml  ar_IQ.xml  ar_JO.xml  ar_KM.xml  ar_KW.xml  ar_LB.xml  ar_LY.xml  ar_MA.xml  ar_MR.xml  ar_OM.xml  ar_PS.xml  ar_QA.xml  ar_SA.xml  ar_SD.xml  ar_SO.xml  ar_SS.xml  ar_SY.xml  ar_TD.xml  ar_TN.xml  ar_YE.xml  as.xml  asa.xml  (+602 more)
data/annotationsDerived/: Makefile.am  af.xml  am.xml  ar.xml  ar_SA.xml  as.xml  ast.xml  az.xml  be.xml  bg.xml  bn.xml  br.xml  bs.xml  ca.xml  ccp.xml  chr.xml  cs.xml  cy.xml  da.xml  de.xml  de_CH.xml  el.xml  en.xml  en_001.xml  en_AU.xml  en_CA.xml  en_GB.xml  en_IN.xml  es.xml  es_419.xml  es_MX.xml  es_US.xml  et.xml  eu.xml  fa.xml  fi.xml  fil.xml  fo.xml  fr.xml  fr_CA.xml  (+75 more)
docs/: index.html  index.xml
downloads/: index.html
engine/: .gitignore  Makefile.am  emoji-picker  emoji-picker.desktop.in.in  emoji-picker.in  emoji_picker.py  factory.py  g_compat_helpers.py  get_clipboard_gtk4.py  hunspell_suggest.py  hunspell_table.py  ibus-engine-typing-booster.in  itb_active_window.py  itb_emoji.py  itb_gtk.py  itb_nltk.py  itb_ollama.py  itb_pango.py  itb_sound.py  itb_util.py  itb_util_core.py  itb_util_gui.py  itb_version.py.in  m17n_translit.py  m17n_translit_test.py  main.py  ollama_pull.py  pylintrc  tabsqlitedb.py  tabstatistics.py  typing-booster.xml.in  typing-booster.xml.in.in  version.py.in
hunspell-tables/: Makefile.am  ar_TN.conf  as_IN.conf  be_BY.conf  bg_BG.conf  bn_IN.conf  ca_ES.conf  cs_CZ.conf  da_DK.conf  de_AT.conf  de_CH.conf  de_DE.conf  el_GR.conf  en_AG.conf  en_AU.conf  en_BS.conf  en_BW.conf  en_BZ.conf  en_DK.conf  en_GB.conf  en_GH.conf  en_HK.conf  en_IE.conf  en_IN.conf  en_JM.conf  en_NA.conf  en_NG.conf  en_NZ.conf  en_PH.conf  en_SG.conf  en_TT.conf  en_US.conf  en_ZA.conf  en_ZW.conf  es_ES.conf  fa_IR.conf  fr_BE.conf  fr_CA.conf  fr_CH.conf  fr_FR.conf  (+37 more)
hunspell-tables/additional/: Makefile.am
ibus-typing-booster/: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  config.status  configure  configure.ac  ibus-typing-booster.pc.in
ibus-typing-booster/data/: Makefile.am
ibus-typing-booster/engine/: Makefile.am  factory.py  hunspell.py  hunspell_suggest.py  hunspell_table.py  ibus-engine-typing-booster.in  ibus-engine-typing-booster.in.in  itb_util.py  keysym2ucs.py  m17n_translit.py  main.py  tabdict.py  tabsqlitedb.py
ibus-typing-booster/hunspell-tables/: Makefile.am  Makefile.in  ar_TN.conf  as_IN.conf  be_BY.conf  bg_BG.conf  bn_IN.conf  ca_ES.conf  cs_CZ.conf  da_DK.conf  de_AT.conf  de_CH.conf  de_DE.conf  el_GR.conf  en_AG.conf  en_AU.conf  en_BS.conf  en_BW.conf  en_BZ.conf  en_DK.conf  en_GB.conf  en_GH.conf  en_HK.conf  en_IE.conf  en_IN.conf  en_JM.conf  en_NA.conf  en_NG.conf  en_NZ.conf  en_PH.conf  en_SG.conf  en_TT.conf  en_US.conf  en_ZA.conf  en_ZW.conf  es_ES.conf  fa_IR.conf  fr_BE.conf  fr_CA.conf  fr_CH.conf  (+38 more)
ibus-typing-booster/hunspell-tables/additional/: Makefile.am  Makefile.in
ibus-typing-booster/icons/: Makefile.am
ibus-typing-booster/icons/additional/: Makefile.am  Makefile.in
ibus-typing-booster/m4/: Makefile  Makefile.am  Makefile.in
ibus-typing-booster/po/: .gitignore  LINGUAS  Makefile  Makefile~  Makevars  POTFILES.in  ca.po  de.po  ibus-hunspell-table.pot  ibus-typing-booster.pot
ibus-typing-booster/setup/: .gitignore  Makefile.am  i18n.py  ibus-setup-typing-booster.in  main.py  pkginstall.py  pref.py  setup.glade  user_transliteration.py
icons/: Makefile.am
icons/additional/: Makefile.am
its/: Makefile.am  typing-booster.its  typing-booster.loc
layouts/: index.html
m4/: .gitignore  Makefile.am
other-files/: fonts.conf
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  ar.po  bn.po  ca.po  cs.po  de.po  el.po  es.po  fa.po  (+28 more)
tests/: .gitignore  Makefile.am  XCompose  chant_d_automne.txt  gtkcases.py  meta.test.in  mock_engine.py  pylintrc  run_tests.in  test-issue-704.mim  test-issue-707.mim  test-issue-712.mim  test-issue-745.mim  test_0_gtk.py  test_compose_sequences.py  test_emoji_candidates.py  test_emoji_similar.py  test_emoji_unicode_version.py  test_gtk.py  test_hunspell_suggest.py  test_itb.py  test_itb_m17n_emulation.py  test_itb_pango.py  test_itb_util.py  test_keyvals_to_keycodes.py  test_m17n_db_info.py  test_m17n_translit.py  test_tabsqlitedb.py  testutils.py  the_road_not_taken.txt
(+108 files in other folders)
