# vim:set noet ts=4
#
# ibus-typing-booster - The Tables engine for IBus
#
# Copyright (c) 2011-2012 Anish Patil  <apatil@redhat.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#  This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of 
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#  You should have received a copy of the GNU General Public License 
# along with this program.  If not, see <http://www.gnu.org/licenses/>

extradata_DATA = \
	emojione.json.gz \
	UnicodeData.txt.gz \
	af.xml.gz \
	am.xml.gz \
	ar.xml.gz \
	as.xml.gz \
	az.xml.gz \
	bg.xml.gz \
	bn.xml.gz \
	ca.xml.gz \
	cs.xml.gz \
	da.xml.gz \
	de.xml.gz \
	el.xml.gz \
	en.xml.gz \
	en_001.xml.gz \
	en_GB.xml.gz \
	es.xml.gz \
	es_419.xml.gz \
	et.xml.gz \
	fa.xml.gz \
	fi.xml.gz \
	fil.xml.gz \
	fr.xml.gz \
	ga.xml.gz \
	gu.xml.gz \
	he.xml.gz \
	hi.xml.gz \
	hr.xml.gz \
	hu.xml.gz \
	hy.xml.gz \
	id.xml.gz \
	is.xml.gz \
	it.xml.gz \
	ja.xml.gz \
	ka.xml.gz \
	kk.xml.gz \
	km.xml.gz \
	kn.xml.gz \
	ko.xml.gz \
	ky.xml.gz \
	lo.xml.gz \
	lt.xml.gz \
	lv.xml.gz \
	mk.xml.gz \
	ml.xml.gz \
	mn.xml.gz \
	mr.xml.gz \
	ms.xml.gz \
	my.xml.gz \
	nb.xml.gz \
	ne.xml.gz \
	nl.xml.gz \
	or.xml.gz \
	pa.xml.gz \
	pl.xml.gz \
	pt.xml.gz \
	pt_PT.xml.gz \
	ro.xml.gz \
	root.xml.gz \
	ru.xml.gz \
	si.xml.gz \
	sk.xml.gz \
	sl.xml.gz \
	sq.xml.gz \
	sr.xml.gz \
	sv.xml.gz \
	sw.xml.gz \
	ta.xml.gz \
	te.xml.gz \
	th.xml.gz \
	tr.xml.gz \
	uk.xml.gz \
	ur.xml.gz \
	uz.xml.gz \
	vi.xml.gz \
	zh.xml.gz \
	zh_Hant.xml.gz \
	$(NULL)

extradatadir = $(pkgdatadir)/data

EXTRA_DIST = \
	$(extradata_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

