# vim:set noet ts=4
#
# ibus-typing-booster - The Tables engine for IBus
#
# Copyright (c) 2011-2012 Anish Patil  <apatil@redhat.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#  This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of 
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#  You should have received a copy of the GNU General Public License 
# along with this program.  If not, see <http://www.gnu.org/licenses/>

extradata_DATA = \
	emojione.json \
	UnicodeData.txt \
	af.xml \
	am.xml \
	ar.xml \
	as.xml \
	az.xml \
	bg.xml \
	bn.xml \
	ca.xml \
	cs.xml \
	da.xml \
	de.xml \
	el.xml \
	en.xml \
	en_001.xml \
	en_GB.xml \
	es.xml \
	es_419.xml \
	et.xml \
	fa.xml \
	fi.xml \
	fil.xml \
	fr.xml \
	ga.xml \
	gu.xml \
	he.xml \
	hi.xml \
	hr.xml \
	hu.xml \
	hy.xml \
	id.xml \
	is.xml \
	it.xml \
	ja.xml \
	ka.xml \
	kk.xml \
	km.xml \
	kn.xml \
	ko.xml \
	ky.xml \
	lo.xml \
	lt.xml \
	lv.xml \
	mk.xml \
	ml.xml \
	mn.xml \
	mr.xml \
	ms.xml \
	my.xml \
	nb.xml \
	ne.xml \
	nl.xml \
	or.xml \
	pa.xml \
	pl.xml \
	pt.xml \
	pt_PT.xml \
	ro.xml \
	root.xml \
	ru.xml \
	si.xml \
	sk.xml \
	sl.xml \
	sq.xml \
	sr.xml \
	sv.xml \
	sw.xml \
	ta.xml \
	te.xml \
	th.xml \
	tr.xml \
	uk.xml \
	ur.xml \
	uz.xml \
	vi.xml \
	zh.xml \
	zh_Hant.xml \
	$(NULL)

extradatadir = $(pkgdatadir)/data

EXTRA_DIST = \
	$(extradata_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

