# vim:set noet ts=4
#
# ibus-typing-booster - A completion input method for IBus
#
# Copyright (c) 2011-2012 Anish Patil <apatil@redhat.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of 
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License 
# along with this program.  If not, see <http://www.gnu.org/licenses/>

SUBDIRS = \
	$(NULL)

icons_DATA = \
	ibus-typing-booster.svg \
	$(NULL)

iconsdir = $(pkgdatadir)/icons

hicolor_icon_scalable_DATA = ibus-typing-booster.svg
hicolor_icon_scalabledir = $(datadir)/icons/hicolor/scalable/apps

hicolor_icon_16_DATA = 16x16/ibus-typing-booster.png
hicolor_icon_16dir = $(datadir)/icons/hicolor/16x16/apps

hicolor_icon_22_DATA = 22x22/ibus-typing-booster.png
hicolor_icon_22dir = $(datadir)/icons/hicolor/22x22/apps

hicolor_icon_32_DATA = 32x32/ibus-typing-booster.png
hicolor_icon_32dir = $(datadir)/icons/hicolor/32x32/apps

hicolor_icon_48_DATA = 48x48/ibus-typing-booster.png
hicolor_icon_48dir = $(datadir)/icons/hicolor/48x48/apps

hicolor_icon_64_DATA = 64x64/ibus-typing-booster.png
hicolor_icon_64dir = $(datadir)/icons/hicolor/64x64/apps

hicolor_icon_128_DATA = 128x128/ibus-typing-booster.png
hicolor_icon_128dir = $(datadir)/icons/hicolor/128x128/apps

hicolor_icon_256_DATA = 256x256/ibus-typing-booster.png
hicolor_icon_256dir = $(datadir)/icons/hicolor/256x256/apps

EXTRA_DIST = \
	$(icons_DATA) \
	$(hicolor_icon_16_DATA) \
	$(hicolor_icon_22_DATA) \
	$(hicolor_icon_32_DATA) \
	$(hicolor_icon_48_DATA) \
	$(hicolor_icon_64_DATA) \
	$(hicolor_icon_128_DATA) \
	$(hicolor_icon_256_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

