# vim:set noet ts=4
#
# ibus-typing-booster - A completion input method for IBus
#
# Copyright (c) 2011-2012 Anish Patil  <apatil@redhat.com>
# Copyright (c) 2016 Mike FABIAN <mfabian@redhat.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of 
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License 
# along with this program.  If not, see <http://www.gnu.org/licenses/>

extradata_DATA = \
	af.xml \
	af_NA.xml \
	af_ZA.xml \
	agq.xml \
	agq_CM.xml \
	ak.xml \
	ak_GH.xml \
	am.xml \
	am_ET.xml \
	ar.xml \
	ar_001.xml \
	ar_AE.xml \
	ar_BH.xml \
	ar_DJ.xml \
	ar_DZ.xml \
	ar_EG.xml \
	ar_EH.xml \
	ar_ER.xml \
	ar_IL.xml \
	ar_IQ.xml \
	ar_JO.xml \
	ar_KM.xml \
	ar_KW.xml \
	ar_LB.xml \
	ar_LY.xml \
	ar_MA.xml \
	ar_MR.xml \
	ar_OM.xml \
	ar_PS.xml \
	ar_QA.xml \
	ar_SA.xml \
	ar_SD.xml \
	ar_SO.xml \
	ar_SS.xml \
	ar_SY.xml \
	ar_TD.xml \
	ar_TN.xml \
	ar_YE.xml \
	as.xml \
	as_IN.xml \
	asa.xml \
	asa_TZ.xml \
	ast.xml \
	ast_ES.xml \
	az.xml \
	az_Cyrl.xml \
	az_Cyrl_AZ.xml \
	az_Latn.xml \
	az_Latn_AZ.xml \
	bas.xml \
	bas_CM.xml \
	be.xml \
	be_BY.xml \
	bem.xml \
	bem_ZM.xml \
	bez.xml \
	bez_TZ.xml \
	bg.xml \
	bg_BG.xml \
	bm.xml \
	bm_ML.xml \
	bn.xml \
	bn_BD.xml \
	bn_IN.xml \
	bo.xml \
	bo_CN.xml \
	bo_IN.xml \
	br.xml \
	br_FR.xml \
	brx.xml \
	brx_IN.xml \
	bs.xml \
	bs_Cyrl.xml \
	bs_Cyrl_BA.xml \
	bs_Latn.xml \
	bs_Latn_BA.xml \
	ca.xml \
	ca_AD.xml \
	ca_ES.xml \
	ca_ES_VALENCIA.xml \
	ca_FR.xml \
	ca_IT.xml \
	ccp.xml \
	ccp_BD.xml \
	ccp_IN.xml \
	ce.xml \
	ce_RU.xml \
	cgg.xml \
	cgg_UG.xml \
	chr.xml \
	chr_US.xml \
	ckb.xml \
	ckb_IQ.xml \
	ckb_IR.xml \
	cs.xml \
	cs_CZ.xml \
	cu.xml \
	cu_RU.xml \
	cy.xml \
	cy_GB.xml \
	da.xml \
	da_DK.xml \
	da_GL.xml \
	dav.xml \
	dav_KE.xml \
	de.xml \
	de_AT.xml \
	de_BE.xml \
	de_CH.xml \
	de_DE.xml \
	de_IT.xml \
	de_LI.xml \
	de_LU.xml \
	dje.xml \
	dje_NE.xml \
	dsb.xml \
	dsb_DE.xml \
	dua.xml \
	dua_CM.xml \
	dyo.xml \
	dyo_SN.xml \
	dz.xml \
	dz_BT.xml \
	ebu.xml \
	ebu_KE.xml \
	ee.xml \
	ee_GH.xml \
	ee_TG.xml \
	el.xml \
	el_CY.xml \
	el_GR.xml \
	en.xml \
	en_001.xml \
	en_150.xml \
	en_AG.xml \
	en_AI.xml \
	en_AS.xml \
	en_AT.xml \
	en_AU.xml \
	en_BB.xml \
	en_BE.xml \
	en_BI.xml \
	en_BM.xml \
	en_BS.xml \
	en_BW.xml \
	en_BZ.xml \
	en_CA.xml \
	en_CC.xml \
	en_CH.xml \
	en_CK.xml \
	en_CM.xml \
	en_CX.xml \
	en_CY.xml \
	en_DE.xml \
	en_DG.xml \
	en_DK.xml \
	en_DM.xml \
	en_ER.xml \
	en_FI.xml \
	en_FJ.xml \
	en_FK.xml \
	en_FM.xml \
	en_GB.xml \
	en_GD.xml \
	en_GG.xml \
	en_GH.xml \
	en_GI.xml \
	en_GM.xml \
	en_GU.xml \
	en_GY.xml \
	en_HK.xml \
	en_IE.xml \
	en_IL.xml \
	en_IM.xml \
	en_IN.xml \
	en_IO.xml \
	en_JE.xml \
	en_JM.xml \
	en_KE.xml \
	en_KI.xml \
	en_KN.xml \
	en_KY.xml \
	en_LC.xml \
	en_LR.xml \
	en_LS.xml \
	en_MG.xml \
	en_MH.xml \
	en_MO.xml \
	en_MP.xml \
	en_MS.xml \
	en_MT.xml \
	en_MU.xml \
	en_MW.xml \
	en_MY.xml \
	en_NA.xml \
	en_NF.xml \
	en_NG.xml \
	en_NL.xml \
	en_NR.xml \
	en_NU.xml \
	en_NZ.xml \
	en_PG.xml \
	en_PH.xml \
	en_PK.xml \
	en_PN.xml \
	en_PR.xml \
	en_PW.xml \
	en_RW.xml \
	en_SB.xml \
	en_SC.xml \
	en_SD.xml \
	en_SE.xml \
	en_SG.xml \
	en_SH.xml \
	en_SI.xml \
	en_SL.xml \
	en_SS.xml \
	en_SX.xml \
	en_SZ.xml \
	en_TC.xml \
	en_TK.xml \
	en_TO.xml \
	en_TT.xml \
	en_TV.xml \
	en_TZ.xml \
	en_UG.xml \
	en_UM.xml \
	en_US.xml \
	en_US_POSIX.xml \
	en_VC.xml \
	en_VG.xml \
	en_VI.xml \
	en_VU.xml \
	en_WS.xml \
	en_ZA.xml \
	en_ZM.xml \
	en_ZW.xml \
	eo.xml \
	eo_001.xml \
	es.xml \
	es_419.xml \
	es_AR.xml \
	es_BO.xml \
	es_BR.xml \
	es_BZ.xml \
	es_CL.xml \
	es_CO.xml \
	es_CR.xml \
	es_CU.xml \
	es_DO.xml \
	es_EA.xml \
	es_EC.xml \
	es_ES.xml \
	es_GQ.xml \
	es_GT.xml \
	es_HN.xml \
	es_IC.xml \
	es_MX.xml \
	es_NI.xml \
	es_PA.xml \
	es_PE.xml \
	es_PH.xml \
	es_PR.xml \
	es_PY.xml \
	es_SV.xml \
	es_US.xml \
	es_UY.xml \
	es_VE.xml \
	et.xml \
	et_EE.xml \
	eu.xml \
	eu_ES.xml \
	ewo.xml \
	ewo_CM.xml \
	fa.xml \
	fa_AF.xml \
	fa_IR.xml \
	ff.xml \
	ff_CM.xml \
	ff_GN.xml \
	ff_MR.xml \
	ff_SN.xml \
	fi.xml \
	fi_FI.xml \
	fil.xml \
	fil_PH.xml \
	fo.xml \
	fo_DK.xml \
	fo_FO.xml \
	fr.xml \
	fr_BE.xml \
	fr_BF.xml \
	fr_BI.xml \
	fr_BJ.xml \
	fr_BL.xml \
	fr_CA.xml \
	fr_CD.xml \
	fr_CF.xml \
	fr_CG.xml \
	fr_CH.xml \
	fr_CI.xml \
	fr_CM.xml \
	fr_DJ.xml \
	fr_DZ.xml \
	fr_FR.xml \
	fr_GA.xml \
	fr_GF.xml \
	fr_GN.xml \
	fr_GP.xml \
	fr_GQ.xml \
	fr_HT.xml \
	fr_KM.xml \
	fr_LU.xml \
	fr_MA.xml \
	fr_MC.xml \
	fr_MF.xml \
	fr_MG.xml \
	fr_ML.xml \
	fr_MQ.xml \
	fr_MR.xml \
	fr_MU.xml \
	fr_NC.xml \
	fr_NE.xml \
	fr_PF.xml \
	fr_PM.xml \
	fr_RE.xml \
	fr_RW.xml \
	fr_SC.xml \
	fr_SN.xml \
	fr_SY.xml \
	fr_TD.xml \
	fr_TG.xml \
	fr_TN.xml \
	fr_VU.xml \
	fr_WF.xml \
	fr_YT.xml \
	fur.xml \
	fur_IT.xml \
	fy.xml \
	fy_NL.xml \
	ga.xml \
	ga_IE.xml \
	gd.xml \
	gd_GB.xml \
	gl.xml \
	gl_ES.xml \
	gsw.xml \
	gsw_CH.xml \
	gsw_FR.xml \
	gsw_LI.xml \
	gu.xml \
	gu_IN.xml \
	guz.xml \
	guz_KE.xml \
	gv.xml \
	gv_IM.xml \
	ha.xml \
	ha_GH.xml \
	ha_NE.xml \
	ha_NG.xml \
	haw.xml \
	haw_US.xml \
	he.xml \
	he_IL.xml \
	hi.xml \
	hi_IN.xml \
	hr.xml \
	hr_BA.xml \
	hr_HR.xml \
	hsb.xml \
	hsb_DE.xml \
	hu.xml \
	hu_HU.xml \
	hy.xml \
	hy_AM.xml \
	id.xml \
	id_ID.xml \
	ig.xml \
	ig_NG.xml \
	ii.xml \
	ii_CN.xml \
	is.xml \
	is_IS.xml \
	it.xml \
	it_CH.xml \
	it_IT.xml \
	it_SM.xml \
	it_VA.xml \
	ja.xml \
	ja_JP.xml \
	jgo.xml \
	jgo_CM.xml \
	jmc.xml \
	jmc_TZ.xml \
	ka.xml \
	ka_GE.xml \
	kab.xml \
	kab_DZ.xml \
	kam.xml \
	kam_KE.xml \
	kde.xml \
	kde_TZ.xml \
	kea.xml \
	kea_CV.xml \
	khq.xml \
	khq_ML.xml \
	ki.xml \
	ki_KE.xml \
	kk.xml \
	kk_KZ.xml \
	kkj.xml \
	kkj_CM.xml \
	kl.xml \
	kl_GL.xml \
	kln.xml \
	kln_KE.xml \
	km.xml \
	km_KH.xml \
	kn.xml \
	kn_IN.xml \
	ko.xml \
	ko_KP.xml \
	ko_KR.xml \
	kok.xml \
	kok_IN.xml \
	ks.xml \
	ks_IN.xml \
	ksb.xml \
	ksb_TZ.xml \
	ksf.xml \
	ksf_CM.xml \
	ksh.xml \
	ksh_DE.xml \
	kw.xml \
	kw_GB.xml \
	ky.xml \
	ky_KG.xml \
	lag.xml \
	lag_TZ.xml \
	lb.xml \
	lb_LU.xml \
	lg.xml \
	lg_UG.xml \
	lkt.xml \
	lkt_US.xml \
	ln.xml \
	ln_AO.xml \
	ln_CD.xml \
	ln_CF.xml \
	ln_CG.xml \
	lo.xml \
	lo_LA.xml \
	lrc.xml \
	lrc_IQ.xml \
	lrc_IR.xml \
	lt.xml \
	lt_LT.xml \
	lu.xml \
	lu_CD.xml \
	luo.xml \
	luo_KE.xml \
	luy.xml \
	luy_KE.xml \
	lv.xml \
	lv_LV.xml \
	mas.xml \
	mas_KE.xml \
	mas_TZ.xml \
	mer.xml \
	mer_KE.xml \
	mfe.xml \
	mfe_MU.xml \
	mg.xml \
	mg_MG.xml \
	mgh.xml \
	mgh_MZ.xml \
	mgo.xml \
	mgo_CM.xml \
	mk.xml \
	mk_MK.xml \
	ml.xml \
	ml_IN.xml \
	mn.xml \
	mn_MN.xml \
	mr.xml \
	mr_IN.xml \
	ms.xml \
	ms_BN.xml \
	ms_MY.xml \
	ms_SG.xml \
	mt.xml \
	mt_MT.xml \
	mua.xml \
	mua_CM.xml \
	my.xml \
	my_MM.xml \
	mzn.xml \
	mzn_IR.xml \
	naq.xml \
	naq_NA.xml \
	nb.xml \
	nb_NO.xml \
	nb_SJ.xml \
	nd.xml \
	nd_ZW.xml \
	nds.xml \
	nds_DE.xml \
	nds_NL.xml \
	ne.xml \
	ne_IN.xml \
	ne_NP.xml \
	nl.xml \
	nl_AW.xml \
	nl_BE.xml \
	nl_BQ.xml \
	nl_CW.xml \
	nl_NL.xml \
	nl_SR.xml \
	nl_SX.xml \
	nmg.xml \
	nmg_CM.xml \
	nn.xml \
	nn_NO.xml \
	nnh.xml \
	nnh_CM.xml \
	nus.xml \
	nus_SS.xml \
	nyn.xml \
	nyn_UG.xml \
	om.xml \
	om_ET.xml \
	om_KE.xml \
	or.xml \
	or_IN.xml \
	os.xml \
	os_GE.xml \
	os_RU.xml \
	pa.xml \
	pa_Arab.xml \
	pa_Arab_PK.xml \
	pa_Guru.xml \
	pa_Guru_IN.xml \
	pl.xml \
	pl_PL.xml \
	prg.xml \
	prg_001.xml \
	ps.xml \
	ps_AF.xml \
	pt.xml \
	pt_AO.xml \
	pt_BR.xml \
	pt_CH.xml \
	pt_CV.xml \
	pt_GQ.xml \
	pt_GW.xml \
	pt_LU.xml \
	pt_MO.xml \
	pt_MZ.xml \
	pt_PT.xml \
	pt_ST.xml \
	pt_TL.xml \
	qu.xml \
	qu_BO.xml \
	qu_EC.xml \
	qu_PE.xml \
	rm.xml \
	rm_CH.xml \
	rn.xml \
	rn_BI.xml \
	ro.xml \
	ro_MD.xml \
	ro_RO.xml \
	rof.xml \
	rof_TZ.xml \
	root.xml \
	ru.xml \
	ru_BY.xml \
	ru_KG.xml \
	ru_KZ.xml \
	ru_MD.xml \
	ru_RU.xml \
	ru_UA.xml \
	rw.xml \
	rw_RW.xml \
	rwk.xml \
	rwk_TZ.xml \
	sah.xml \
	sah_RU.xml \
	saq.xml \
	saq_KE.xml \
	sbp.xml \
	sbp_TZ.xml \
	sd.xml \
	sd_PK.xml \
	se.xml \
	se_FI.xml \
	se_NO.xml \
	se_SE.xml \
	seh.xml \
	seh_MZ.xml \
	ses.xml \
	ses_ML.xml \
	sg.xml \
	sg_CF.xml \
	shi.xml \
	shi_Latn.xml \
	shi_Latn_MA.xml \
	shi_Tfng.xml \
	shi_Tfng_MA.xml \
	si.xml \
	si_LK.xml \
	sk.xml \
	sk_SK.xml \
	sl.xml \
	sl_SI.xml \
	smn.xml \
	smn_FI.xml \
	sn.xml \
	sn_ZW.xml \
	so.xml \
	so_DJ.xml \
	so_ET.xml \
	so_KE.xml \
	so_SO.xml \
	sq.xml \
	sq_AL.xml \
	sq_MK.xml \
	sq_XK.xml \
	sr.xml \
	sr_Cyrl.xml \
	sr_Cyrl_BA.xml \
	sr_Cyrl_ME.xml \
	sr_Cyrl_RS.xml \
	sr_Cyrl_XK.xml \
	sr_Latn.xml \
	sr_Latn_BA.xml \
	sr_Latn_ME.xml \
	sr_Latn_RS.xml \
	sr_Latn_XK.xml \
	sv.xml \
	sv_AX.xml \
	sv_FI.xml \
	sv_SE.xml \
	sw.xml \
	sw_CD.xml \
	sw_KE.xml \
	sw_TZ.xml \
	sw_UG.xml \
	ta.xml \
	ta_IN.xml \
	ta_LK.xml \
	ta_MY.xml \
	ta_SG.xml \
	te.xml \
	te_IN.xml \
	teo.xml \
	teo_KE.xml \
	teo_UG.xml \
	tg.xml \
	tg_TJ.xml \
	th.xml \
	th_TH.xml \
	ti.xml \
	ti_ER.xml \
	ti_ET.xml \
	tk.xml \
	tk_TM.xml \
	to.xml \
	to_TO.xml \
	tr.xml \
	tr_CY.xml \
	tr_TR.xml \
	tt.xml \
	tt_RU.xml \
	twq.xml \
	twq_NE.xml \
	tzm.xml \
	tzm_MA.xml \
	ug.xml \
	ug_CN.xml \
	uk.xml \
	uk_UA.xml \
	ur.xml \
	ur_IN.xml \
	ur_PK.xml \
	uz.xml \
	uz_Arab.xml \
	uz_Arab_AF.xml \
	uz_Cyrl.xml \
	uz_Cyrl_UZ.xml \
	uz_Latn.xml \
	uz_Latn_UZ.xml \
	vai.xml \
	vai_Latn.xml \
	vai_Latn_LR.xml \
	vai_Vaii.xml \
	vai_Vaii_LR.xml \
	vi.xml \
	vi_VN.xml \
	vo.xml \
	vo_001.xml \
	vun.xml \
	vun_TZ.xml \
	wae.xml \
	wae_CH.xml \
	wo.xml \
	wo_SN.xml \
	xog.xml \
	xog_UG.xml \
	yav.xml \
	yav_CM.xml \
	yi.xml \
	yi_001.xml \
	yo.xml \
	yo_BJ.xml \
	yo_NG.xml \
	yue.xml \
	yue_Hans.xml \
	yue_Hans_CN.xml \
	yue_Hant.xml \
	yue_Hant_HK.xml \
	zgh.xml \
	zgh_MA.xml \
	zh.xml \
	zh_Hans.xml \
	zh_Hans_CN.xml \
	zh_Hans_HK.xml \
	zh_Hans_MO.xml \
	zh_Hans_SG.xml \
	zh_Hant.xml \
	zh_Hant_HK.xml \
	zh_Hant_MO.xml \
	zh_Hant_TW.xml \
	zu.xml \
	zu_ZA.xml \
	$(NULL)

extradatadir = $(pkgdatadir)/data/annotations

EXTRA_DIST = \
	$(extradata_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

