# vim:set noet ts=4
#
# ibus-typing-booster - A completion input method for IBus
#
# Copyright (c) 2011-2012 Anish Patil  <apatil@redhat.com>
# Copyright (c) 2016 Mike FABIAN <mfabian@redhat.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of 
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License 
# along with this program.  If not, see <http://www.gnu.org/licenses/>

extradata_DATA = \
	af.xml \
	am.xml \
	ar.xml \
	as.xml \
	ast.xml \
	az.xml \
	be.xml \
	bg.xml \
	bn.xml \
	br.xml \
	bs.xml \
	ca.xml \
	ccp.xml \
	chr.xml \
	cs.xml \
	cy.xml \
	da.xml \
	de.xml \
	de_CH.xml \
	el.xml \
	en.xml \
	en_001.xml \
	en_AU.xml \
	en_CA.xml \
	en_GB.xml \
	es.xml \
	es_419.xml \
	es_MX.xml \
	es_US.xml \
	et.xml \
	eu.xml \
	fa.xml \
	fi.xml \
	fil.xml \
	fo.xml \
	fr.xml \
	fr_CA.xml \
	ga.xml \
	gd.xml \
	gl.xml \
	gu.xml \
	he.xml \
	hi.xml \
	hr.xml \
	hu.xml \
	hy.xml \
	id.xml \
	is.xml \
	it.xml \
	ja.xml \
	ka.xml \
	kab.xml \
	kk.xml \
	km.xml \
	kn.xml \
	ko.xml \
	ky.xml \
	lo.xml \
	lt.xml \
	lv.xml \
	mk.xml \
	ml.xml \
	mn.xml \
	mr.xml \
	ms.xml \
	my.xml \
	nb.xml \
	ne.xml \
	nl.xml \
	nn.xml \
	or.xml \
	pa.xml \
	pl.xml \
	ps.xml \
	pt.xml \
	pt_PT.xml \
	ro.xml \
	root.xml \
	ru.xml \
	sd.xml \
	si.xml \
	sk.xml \
	sl.xml \
	sq.xml \
	sr.xml \
	sr_Latn.xml \
	sv.xml \
	sw.xml \
	ta.xml \
	te.xml \
	th.xml \
	tk.xml \
	to.xml \
	tr.xml \
	uk.xml \
	ur.xml \
	uz.xml \
	vi.xml \
	yue.xml \
	yue_Hans.xml \
	zh.xml \
	zh_Hant.xml \
	zh_Hant_HK.xml \
	zu.xml \
	$(NULL)

extradatadir = $(pkgdatadir)/data/annotationsDerived

EXTRA_DIST = \
	$(extradata_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

